sections instead of div

--- a/index.html
+++ b/index.html
@@ -29,12 +29,11 @@
         </ul>
     </nav>
     <section class="warp-club">
-        <div class="column1">
+        <section class="column1">
             <h1>Warp Club</h1>
-        </div>
-        <div class="column2">
-
-        </div>
+        </section>
+        <section class="column2">
+        </section>
     </section>
 </body>
 </html>
