--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         </div>
         </ul>
     </nav>
+    <main>
     <section class="warp-club">
         <section class="column1">
             <h1>Warp Club</h1>
         </section>
         <section class="column2">
         </section>
-    </section>
+    </main>
 </body>
 </html>
